chore: update project name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "health_track",
+  "name": "volunteer_and_event_management_platform",
   "version": "0.1.0",
   "description": "Internet Computer message board application",
   "dependencies": {
